[package]
name = "kg-script"
version = "0.1.0"
authors = ["Jakub Chłapiński <jakub.chlapinski@kodegenix.pl>"]
description = """
Scripting language operating on `kg-tree` object graph data
"""
readme = "README.md"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/Kodegenix/kg-script"
edition = "2018"
build = "build.rs"

[workspace]

[dependencies]
lalrpop-util = "0.19.1"

[dev-dependencies]

[build-dependencies]
lalrpop = "0.19.1"
